legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr61162-2.c-4.8.2-1.out.txt
pr61162-2.c: In function ‘fn2’:
pr61162-2.c:17:3: error: incompatible types when returning type ‘struct s’ but ‘int’ was expected
   return s;  
   ^
